--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
+        <span>D</span>
+        <span>Z</span>
+        <span>I</span>
+        <span>R</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
